# azdim-bench

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml
data/etalon/: mixed_2026-04-19_etalon.json  sl11_2025-03-02_etalon.json  sl11_2025-03-09_etalon.json  sl11_2026-03-09_etalon.json  sl11_2026-03-15_etalon.json  sl9_2025-04-13_etalon.json  sl9_2025-04-20_etalon.json  sl9_2025-04-27_etalon.json  sl9_2026-04-05_etalon.json  sl9_2026-04-12_etalon.json  sl9_2026-04-26_etalon.json  ue2_2024-07-07_etalon.json  ue2_2024-07-14_etalon.json  ue2_2025-05-25_etalon.json  ue2_2025-06-01_etalon.json  ue2_2025-07-06_etalon.json  ue2_2025-07-13_etalon.json  ue2_2026-06-07_etalon.json
data/extracted/: mixed_2026-04-19_izah.jsonl  sl11_2025-03-02_izah.jsonl  sl11_2025-03-09_izah.jsonl  sl11_2026-03-09_izah.jsonl  sl11_2026-03-15_izah.jsonl  ue2_2025-05-25_g2_izah.jsonl  ue2_2025-05-25_g3_izah.jsonl  ue2_2025-06-01_g1_izah.jsonl  ue2_2025-06-01_g3geo_izah.jsonl  ue2_2025-06-01_g4_izah.jsonl  ue2_2025-07-06_g2_izah.jsonl  ue2_2025-07-06_g3_izah.jsonl  ue2_2025-07-13_g1_izah.jsonl  ue2_2025-07-13_g3geo_izah.jsonl  ue2_2025-07-13_g4_izah.jsonl  ue2_2026-05-24_g2_izah.jsonl  ue2_2026-05-24_g3_izah.jsonl  ue2_2026-06-07_g1_izah.jsonl  ue2_2026-06-07_g4_izah.jsonl  (+1 more)
docs/: eval_design.md  release_plan.md  visual_roadmap.md
manifest/: api_usage.jsonl  batches.json  core_set.json  downloads.json  models.json  sources.json
paper/: main.tex
release/: README.md  azdim_bench.jsonl  run_azdim.py
results/: dim_scores_v0.json  metrics_v0.json
site/: data.js  index.html
(+52 files in other folders)
