[project]
name = "azdim"
version = "0.1.0"
description = "AzDIM-Bench: benchmark of Azerbaijani state exam questions (DIM) for evaluating LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pypdf>=5.0",
    "flask>=3.1.3",
    "openai>=2.44.0",
    "google-genai>=2.10.0",
]

[project.optional-dependencies]
eval = [
    "openai>=1.50",
    "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azdim"]
